# Infinite-Engine

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
content/default/: balance.json  entities.json  items.json  tiles.json
docs/: ai_guide.md  api.md  architecture.md  content_packs.md  decisions.md
src/dungeon_engine/: __init__.py
src/dungeon_engine/content/: loader.py  schemas.py
src/dungeon_engine/core/: actions.py  constants.py  engine.py  events.py  state.py
src/dungeon_engine/procedural/: chunk_gen.py  rooms.py
src/dungeon_engine/server/: app.py  routes.py  schemas.py  session_store.py
src/dungeon_engine/simulation/: ai.py  combat.py  fov.py  turn.py
src/dungeon_engine/utils/: grid.py  rng.py
tests/: test_actions.py  test_api_smoke.py  test_chunk_gen.py  test_determinism.py
